[tool.poetry]
name = "py-dev-deps"
version = "0.2.1"
description = "A package for common python development dependencies"
authors = ["Darren Weber <dweber.consulting@gmail.com>"]
license = "Apache 2.0"

readme = "README.md"  # Markdown files are supported
repository = "https://github.com/dazza-codes/py-dev-deps.git"
homepage = "https://github.com/dazza-codes/py-dev-deps"

keywords = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

include = ["py_dev_deps/**/*"]
exclude = ["tests/**/*"]

packages = [
    {include = "py_dev_deps"}
]

# This project intentionally uses development dependencies for the project dependencies.

# The aim of this project is to provide a common denominator for python development dependencies
# in one package that can be added as a development dependency to other projects.  By using
# poetry to resolve and maintain a common set of compatible development dependencies, it may
# help to reduce the burdens of package installations for projects using this project as a
# development dependency.

[tool.poetry.dependencies]
python = "^3.7"

# static code analysis and linters
autopep8 = "^1.5.4"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-type-annotations = "^0.1.0"
isort = "^5.9.1"
mypy = "^0.790"
pylint = "^2.6.0"
pre-commit = "^2.9.2"

# pytest and plugins
pytest = "^6.1.2"
pytest-asyncio = "^0.14.0"
pytest-benchmark = "^3.2.3"
pytest-cov = "^2.10.1"
pytest-datadir = "^1.3.1"
pytest-datafiles = "^2.0"
pytest-freezegun = "^0.4.2"
pytest-mock = "^3.3.1"
pytest-pep8 = "^1.0.6"
pytest-profiling = "^1.7.0"
pytest-randomly = "^3.5.0"
pytest-vcr = "^1.0.2"
pytest-voluptuous = "^1.2.0"
pytest-xdist = "^2.1.0"
requests-mock = "^1.8.0"

# docs
doc8 = "^0.8.1"
m2r2 = "^0.2.7"
readme-renderer = {extras = ["md"], version = "^28.0"}
Sphinx = "3.2.*"
sphinx-autoapi = "^1.5.1"
sphinx-autodoc-typehints = "^1.11.1"
sphinx-rtd-theme = "^0.5.0"

# packaging
setuptools = "^50.3.2"
tox = "^3.20.1"
twine = "^3.2.0"
wheel = "^0.36.0"
pipdeptree = "^1.0.0"

# dev tools
ipdb = "^0.13.4"


[tool.poetry.extras]


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
