[tool.poetry]
name = "py-dev-deps"
version = "0.4.0"
description = "A package for common python development dependencies"
authors = ["Darren Weber <dweber.consulting@gmail.com>"]
license = "Apache 2.0"

readme = "README.md"  # Markdown files are supported
repository = "https://github.com/dazza-codes/py-dev-deps.git"
homepage = "https://github.com/dazza-codes/py-dev-deps"

keywords = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

include = ["py_dev_deps/**/*"]
exclude = ["tests/**/*"]

packages = [
    {include = "py_dev_deps"}
]

# This project intentionally uses development dependencies for the project dependencies.

# The aim of this project is to provide a common denominator for python development dependencies
# in one package that can be added as a development dependency to other projects.  By using
# poetry to resolve and maintain a common set of compatible development dependencies, it may
# help to reduce the burdens of package installations for projects using this project as a
# development dependency.

[tool.poetry.dependencies]
python = "^3.7"

# static code analysis and linters
autopep8 = "^1.5.4"
black = "^22.0"
flake8 = "^3.8.4"
flake8-type-annotations = "^0.1.0"
isort = "^5.9.1"
mypy = "^0.790"
pylint = "^2.6.0"
pre-commit = "^2.9.2"

# pytest and plugins
pytest = "^7.0"
pytest-asyncio = "^0.18.0"
pytest-benchmark = "^3.0"
pytest-cov = "^2.0"
pytest-datadir = "^1.3"
pytest-datafiles = "^2.0"
pytest-freezegun = "^0.4.2"
pytest-mock = "^3.0"
pytest-pep8 = "^1.0"
pytest-profiling = "^1.0"
pytest-randomly = "^3.0"
pytest-vcr = "^1.0"
pytest-voluptuous = "^1.0"
pytest-xdist = "^2.0"
requests-mock = "^1.0"

# docs
doc8 = "*"
mdformat_myst = "^0.1"
m2r2 = "^0.3"
readme-renderer = {extras = ["md"], version = "^35.0"}
Sphinx = "^4.0"
sphinx-autoapi = "^1.0"
sphinx-autodoc-typehints = "^1.0"
sphinx-rtd-theme = "^1.0"

# packaging
setuptools = "*"
tox = "*"
twine = "^4.0"
wheel = "*"
pipdeptree = "^2.0"

# dev tools
ipdb = "^0.13"


[tool.poetry.extras]


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
