[tool.poetry]
name = "py-dev-deps"
version = "0.4.0"
description = "A package for common python development dependencies"
authors = ["Darren Weber <dweber.consulting@gmail.com>"]
license = "Apache 2.0"

readme = "README.md"  # Markdown files are supported
repository = "https://github.com/dazza-codes/py-dev-deps.git"
homepage = "https://github.com/dazza-codes/py-dev-deps"

keywords = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

include = ["py_dev_deps/**/*"]
exclude = ["tests/**/*"]

packages = [
    {include = "py_dev_deps"}
]

# This project intentionally uses development dependencies for the project dependencies.

# The aim of this project is to provide a common denominator for python development dependencies
# in one package that can be added as a development dependency to other projects.  By using
# poetry to resolve and maintain a common set of compatible development dependencies, it may
# help to reduce the burdens of package installations for projects using this project as a
# development dependency.

[tool.poetry.dependencies]
python = "^3.8"

# static code analysis and linters
autopep8 = "^2.0"
black = "^22.0"
flake8 = "^5.0"
isort = "^5.0"
mypy = "*"
pylint = "^2.0"
pre-commit = "^2.0"

# pytest and plugins
pytest = "^7.0"
pytest-asyncio = "*"
pytest-benchmark = "^4.0"
pytest-cov = "^4.0"
pytest-datadir = "^1.0"
pytest-datafiles = "^2.0"
pytest-freezegun = "*"
pytest-mock = "^3.0"
pytest-pep8 = "^1.0"
pytest-profiling = "^1.0"
pytest-randomly = "^3.0"
pytest-vcr = "^1.0"
pytest-voluptuous = "^1.0"
pytest-xdist = "^3.0"
requests-mock = "^1.0"

# docs
doc8 = "*"
mdformat_myst = "*"
m2r2 = "*"
readme-renderer = {extras = ["md"], version = "^37.0"}
Sphinx = "^5.0"
sphinx-autoapi = "^2.0"
sphinx-autodoc-typehints = "^1.0"
sphinx-rtd-theme = "^1.0"

# packaging
setuptools = "*"
tox = "*"
twine = "^4.0"
wheel = "*"
pipdeptree = "^2.0"

# dev tools
ipdb = "*"


[tool.poetry.extras]


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
